# logstructor

./: .buildinfo  README.md  genindex.html  index.html  junit.xml  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/tutorial/: basic-usage.doctree  best-practices.doctree  context-management.doctree  getting-started.doctree  json-formatting.doctree
.github/workflows/: ci.yml
logstructor/: context.py
tutorial/: basic-usage.html  best-practices.html  context-management.html  getting-started.html  json-formatting.html
